# systemd-lsp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: nix.yml  release.yml  rust.yml
docs/: automount.md  build.md  container.md  exec.md  image.md  install.md  kill.md  kube.md  mount.md  network.md  path.md  pod.md  resource-control.md  scope.md  sections.txt  service.md  slice.md  socket.md  swap.md  timer.md  unit.md  volume.md
docs/directives/: automount.txt  build.txt  container.txt  device.txt  exec.txt  image.txt  install.txt  kill.txt  kube.txt  mount.txt  network.txt  path.txt  pod.txt  resourcecontrol.txt  scope.txt  service.txt  slice.txt  socket.txt  swap.txt  target.txt  timer.txt  unit.txt  volume.txt
docs/directives/install/: wantedby.txt
docs/directives/service/: execstart.txt  type-detailed.txt  type.txt
docs/directives/unit/: description-detailed.txt  description.txt  wants.txt
docs/sections/: automount.md  build.txt  container.txt  device.txt  image.txt  install.txt  kube.txt  mount.txt  network.txt  path.txt  pod.txt  scope.md  service.txt  slice.md  socket.txt  swap.txt  timer.txt  unit.txt  volume.txt
examples/: data.volume  example-with-errors.service  example.service  myapp.build  myapp.pod  mynetwork.network  nginx.image  quadlet-example.container  warnings-only.service  wordpress.kube
src/: completion.rs  constants.rs  definition.rs  diagnostics.rs  formatting.rs  lib.rs  main.rs  parser.rs  semantic_tokens.rs
tests/: cli_tests.rs  lsp_tests.rs
tools/doc-sync/: backend.go  config.go  go.mod  go.sum  main.go  parse.go  podman.go  systemd.go  utils.go
