[package]
name = "systemdls"
version = "0.1.0"
edition = "2021"
authors = ["James Fotherby <fotherby1@gmail.com>"]
description = "Language Server Protocol implementation for systemd unit files"
license = "MIT"
repository = "https://github.com/jfryy/systemdls"
homepage = "https://github.com/jfryy/systemdls"
documentation = "https://github.com/jfryy/systemdls"
keywords = ["systemd", "lsp", "language-server", "linux", "unit-files"]
categories = ["development-tools", "text-editors"]
readme = "README.md"

[[bin]]
name = "systemdls"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.0"
dashmap = "5.0"
log = "0.4"
env_logger = "0.10"
atty = "0.2"

[dev-dependencies]
tokio-test = "0.4"
