[package]
name = "systemd-lsp"
version = "0.1.0"
edition = "2021"
authors = ["James Fotherby <fotherby1@gmail.com>"]
description = "Language Server Protocol implementation for systemd unit files"
license = "MIT"
repository = "https://github.com/jfryy/systemd-lsp"
homepage = "https://github.com/jfryy/systemd-lsp"
documentation = "https://github.com/jfryy/systemd-lsp"
keywords = ["systemd", "lsp", "language-server", "linux", "unit-files"]
categories = ["development-tools", "text-editors"]
readme = "README.md"
exclude = [
    "target/",
    "*.log",
    "*.tmp",
    ".git/",
    ".github/",
    "examples/",
    "!README.md"
]

[[bin]]
name = "systemd-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.22.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.0"
dashmap = "5.0"
log = "0.4"
env_logger = "0.10"
atty = "0.2"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
